# CoastalAssistance

./: .env_example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
coastalassistance/: config.py  main.py
coastalassistance/constants/: const_about_photo.py  const_addpic.py  const_general.py  const_help.py  const_list_added.py  const_registration.py  const_settings.py
coastalassistance/database/: database.py  main_db.py  models.py  postgresql.py
coastalassistance/database/repositories/: shore.py  user.py
coastalassistance/handlers/: about_photo.py  add_pic.py  admin_panel.py  help.py  list_added.py  registration.py  settings.py
coastalassistance/keyboards/inkb/: inkb_admin.py  inkb_help.py
coastalassistance/keyboards/kb/: choice.py  exit_b.py  main_menu.py
coastalassistance/misc/: bot.py  location_info.py  maps.py
coastalassistance/neural_networks/: load_model.py
coastalassistance/neural_networks/model_beach/: fingerprint.pb  keras_metadata.pb  saved_model.pb
coastalassistance/neural_networks/model_beach/variables/: variables.data-00000-of-00001  variables.index
docker_compose/: app.yaml  database.yaml
migration/: env.py
migration/versions/: c77f5fffad13_initial.py
